--- a/playbook/roles/ckan/tasks/ckan_patches.yml
+++ b/playbook/roles/ckan/tasks/ckan_patches.yml
@@ -12,7 +12,7 @@
     for d in {{ ckan_virtualenv }}/patches/*; do
         if [ -d $d ]; then
             for f in `ls $d/*.patch | sort -g`; do
-                cd {{ ckan_virtualenv }}/src/`basename "$d"` && echo "Applying patch $f to {{ ckan_virtualenv }}/src/`basename $d`" && patch -p1 < "$f" 2>&1;
+                cd {{ ckan_src_dir }}/`basename "$d"` && echo "Applying patch $f to {{ ckan_src_dir }}/`basename $d`" && patch -p1 < "$f" 2>&1;
             done;
         fi;
     done
