--- a/playbook/roles/ckan/tasks/ckan_virtualenv.yml
+++ b/playbook/roles/ckan/tasks/ckan_virtualenv.yml
@@ -51,21 +51,21 @@
   become: true
   become_user: "{{ ckan_user }}"
 
-- name: Ensure {{ ckan_virtualenv }}/src exists
+- name: "Ensure {{ ckan_src_dir }} exists"
   file:
-    path: "{{ ckan_virtualenv }}/src"
+    path: "{{ ckan_src_dir }}"
     state: directory
   become: true
   become_user: "{{ ckan_user }}"
 
-- name: Find directories in {{ ckan_virtualenv }}/src that are not 'ckan' or 'ckan-pycsw'
+- name: "Find directories in {{ ckan_src_dir }} that are not 'ckan' or 'ckan-pycsw'"
   find:
-    paths: "{{ ckan_virtualenv }}/src"
+    paths: "{{ ckan_src_dir }}"
     file_type: directory
     excludes: ['ckan', 'ckan-pycsw']
   register: dirs_to_remove
 
-- name: Remove directories in {{ ckan_virtualenv }}/src that are not 'ckan'
+- name: "Remove directories in {{ ckan_src_dir }} that are not 'ckan'"
   file:
     path: "{{ item.path }}"
     state: absent
