--- a/playbook/roles/ckan/tasks/ckan_config_ckan_ini.yml
+++ b/playbook/roles/ckan/tasks/ckan_config_ckan_ini.yml
@@ -35,3 +35,41 @@
     line: "api_token.jwt.decode.secret = {{ jwt_secret.stdout }}"
   become: true
   when: jwt_secret.rc == 0
+
+- name: "Uncomment SMTP settings if {{ ckan_smpt_active | default(false) }} is true"
+  block:
+    - name: "Uncomment smtp.server"
+      lineinfile:
+        path: "{{ ckan_ini_path }}"
+        regexp: '^#smtp.server = {{ ckan_smtp_server }}'
+        line: 'smtp.server = {{ ckan_smtp_server }}'
+        state: present
+
+    - name: "Uncomment smtp.starttls"
+      lineinfile:
+        path: "{{ ckan_ini_path }}"
+        regexp: '^#smtp.starttls = {{ ckan_smpt_starttls }}'
+        line: 'smtp.starttls = {{ ckan_smpt_starttls }}'
+        state: present
+
+    - name: "Uncomment smtp.user"
+      lineinfile:
+        path: "{{ ckan_ini_path }}"
+        regexp: '^#smtp.user = {{ ckan_smtp_user }}'
+        line: 'smtp.user = {{ ckan_smtp_user }}'
+        state: present
+
+    - name: "Uncomment smtp.password"
+      lineinfile:
+        path: "{{ ckan_ini_path }}"
+        regexp: '^#smtp.password = {{ ckan_smtp_password }}'
+        line: 'smtp.password = {{ ckan_smtp_password }}'
+        state: present
+
+    - name: "Uncomment smtp.mail_from"
+      lineinfile:
+        path: "{{ ckan_ini_path }}"
+        regexp: '^#smtp.mail_from = {{ ckan_smtp_mail_from }}'
+        line: 'smtp.mail_from = {{ ckan_smtp_mail_from }}'
+        state: present
+  when: ckan_smpt_active | default(false)
