--- a/playbook/inventories/staging/host_vars/staging_01.yml
+++ b/playbook/inventories/staging/host_vars/staging_01.yml
@@ -12,7 +12,7 @@ ssh_keys_enabled: False
 # Retrieve all the packages and versions installed on the target host
 gather_package_facts: true
 deployment_version: staging
-deployment_version_name: Certificación
+deployment_version_name: Staging
 
 ### Webserver #########################################
 proxy_server_name: localhost
@@ -107,38 +107,46 @@ ckan_datastore: {
 }
 
 ### CKAN configuration variables #########################################
+## ckan-ansible versions available: ckan-2.9.11, ckan-2.10.5
+ckan_version: ckan-2.10.5
 ckan_site_id: default
 ckan_site_name: "{{ proxy_server_url }}"
 ## Check if the ckan_site_url is correctly configured. Default uses the proxy_server_name and nginx_port
 ckan_site_url: "{{ ckan_site_name }}:{{ nginx_port }}"
 ckan_root_path: "{{ proxy_ckan_location }}/{% raw %}{{LANG}}{% endraw %}"
-ckan_site_title: "SIG MITECO CKAN - {{ deployment_version_name }}"
-ckan_site_description: "Portal de datos abiertos CKAN - {{ deployment_version_name }}"
+ckan_site_title: "CKAN site - {{ deployment_version_name }}"
+ckan_site_description: "CKAN site - {{ deployment_version_name }}"
+ckan_site_logo: "images/default/ckan-logo.png"
+ckan_favicon: base/images/ckan.ico
+ckan_site_intro_text: "[![ckan-docker-spatial](https://img.shields.io/badge/ckan_docker_spatial-CKAN_${CKAN_VERSION}-brightgreen?style=social&logo=github#center)](https://github.com/mjanez/ckan-docker)\n[`ckan-docker *spatial`](https://github.com/mjanez/ckan-docker) is a ready-to-use development environment for [CKAN](https://github.com/ckan/ckan), the world’s leading open-source data portal platform."
+ckan_site_about: "{{ ckan_site_intro_text }}"
 ckan_sysadmin_name: ckan_admin
 ckan_sysadmin_email: ckan_admin@localhost
 ckan_sysadmin_password: test1234
 # Default number of facets shown in search results. Default 10.
 ckan_search_facets_default: 4
+ckan_licenses_group_url: "file://{{ ckan_src_dir }}/src/ckanext-schemingdcat/ckanext/schemingdcat/public/static/licenses.json"
+ckan_datastore_sqlsearch_enabled: false
 
 #### Plugins
-ckan_plugins: "stats image_view text_view recline_view webpage_view resourcedictionary datastore xloader spatial_metadata spatial_query resource_proxy geo_view geojson_view wmts_view shp_view dcat dcat_rdf_harvester dcat_json_harvester dcat_json_interface miteco schemingdcat_datasets schemingdcat_groups schemingdcat_organizations schemingdcat schemingdcat_ckan_harvester schemingdcat_xls_harvester harvest pdf_view pages fluent"
+ckan_plugins: "activity stats image_view video_view audio_view webpage_view text_view datatables_view resourcedictionary datastore xloader spatial_metadata spatial_query spatial_harvest_metadata_api csw_harvester waf_harvester doc_harvester resource_proxy geo_view geojson_view wmts_view shp_view dcat dcat_rdf_harvester dcat_json_harvester dcat_json_interface schemingdcat schemingdcat_datasets schemingdcat_groups schemingdcat_organizations schemingdcat_ckan_harvester schemingdcat_xls_harvester harvest pdf_view pages fluent"
 
 #### Previews formats
 ckan__preview__json_formats: "json jsonld"
 ckan__preview__xml_formats: "xml rdf rdf+xml owl+xml atom rss turtle ttl n3 n-triples"
-ckan__preview__text_formats: "text plain text/plain text/turtle csv tsv rss txt json"
+ckan__preview__text_formats: "text plain text/plain text/turtle rss txt"
 ckan__preview__loadable: "html htm rdf+xml owl+xml xml n3 n-triples turtle plain atom csv tsv rss txt json arcgis_rest"
 
 #### Resource Proxy settings
 ### Preview size limit, default: 1MB
 ckan__resource_proxy__max_file_size: 50048576
 ## Size of chunks to read/write__
-ckan__resource_proxy__chunk_size: 8192
+ckan__resource_proxy__chunk_size: 4096
 ## Default timeout for fetching proxied items
-ckan__resource_proxy__timeout: 25
+ckan__resource_proxy__timeout: 10
 
 #### Views
-ckan_views_default_views: "image_view webpage_view text_view recline_view wmts_view geojson_view geo_view shp_view pdf_view" 
+ckan_views_default_views: "image_view video_view audio_view webpage_view text_view datatables_view wmts_view geojson_view geo_view shp_view pdf_view"
 
 #### Localization
 ckan_locale_default: es
@@ -159,7 +167,7 @@ ckan__harvest__log_timeframe: 40
 
 #### ckanext-dcat
 ckanext__dcat__base_uri: "{{ ckan_site_url }}{{ proxy_ckan_location }}"
-ckanext__dcat__rdf__profiles: "euro_dcat_ap_2"
+ckanext__dcat__rdf__profiles: "eu_dcat_ap_2 eu_dcat_ap_scheming"
 ckanext__dcat__catalog_endpoint: "{{ proxy_ckan_location }}.{_format}"
 
 #### ckanext-geoview
@@ -169,9 +177,9 @@ ckanext__geoview__shp_viewer__srid: 3857
 ckanext__geoview__shp_viewer__encoding: UTF-8
 
 #### ckanext-scheming
-ckanext__scheming__dataset_schemas: "ckanext.schemingdcat:schemas/geodcatap_es/geodcatap_es_dataset.yaml"
-ckanext__scheming__group_schemas: "ckanext.schemingdcat:schemas/geodcatap_es/geodcatap_es_group.json"
-ckanext__scheming__organization_schemas: "ckanext.schemingdcat:schemas/geodcatap_es/geodcatap_es_org.json"
+ckanext__scheming__dataset_schemas: "ckanext.schemingdcat:schemas/geodcat_ap/eu_geodcat_ap_full.yaml"
+ckanext__scheming__group_schemas: "ckanext.schemingdcat:schemas/geodcat_ap/eu_geodcat_ap_group.json"
+ckanext__scheming__organization_schemas: "ckanext.schemingdcat:schemas/geodcat_ap/eu_geodcat_ap_org.json"
 ckanext__scheming__presets: "ckanext.schemingdcat:schemas/default_presets.json ckanext.fluent:presets.json"
 
 #### ckanext-spatial (Solr Backend - solr9-spatial: https://docs.ckan.org/projects/ckanext-spatial/en/latest/spatial-search.html#choosing-a-backend-for-the-spatial-search)
@@ -193,20 +201,19 @@ ckanext__pages__group_menu: True
 ckanext__pages__organization_menu: True
 
 #### ckanext-schemingdcat
-ckanext__schemingdcat__facet_list: "dataset_scope theme groups theme_es dcat_type groups publisher_name publisher_type spatial_uri owner_org res_format frequency tags tag_uri conforms_to"
+ckanext__schemingdcat__facet_list: "dataset_scope theme groups theme_es language dcat_type groups publisher_name publisher_type spatial_uri owner_org res_format frequency tags tag_uri conforms_to"
 ckanext__schemingdcat__organization_custom_facets: true
 ckanext__schemingdcat__group_custom_facets: true
 ckanext__schemingdcat__geometadata_base_uri: "{{ ckan_site_url }}{{ proxy_pycsw_location }}"
 ckanext__schemingdcat_default_package_item_icon: "theme"
 ckanext__schemingdcat_default_package_item_show_spatial: True
-ckanext__schemingdcat_show_metadata_templates_toolbar: True
+ckanext__schemingdcat_show_metadata_templates_toolbar: False
 ckanext__schemingdcat_metadata_templates_search_identifier: "miteco-plantilla"
+ckanext__schemingdcat_endpoints_yaml: "endpoints.yaml"
+ckanext__schemingdcat_social_github: "https://github.com/mjanez/ckanext-schemingdcat"
+ckanext__schemingdcat_social_x: "https://x.com/ckanproject"
+ckanext__schemingdcat_social_linkedin: "https://www.linkedin.com/company/ckanproject"
 
-#### ckanext-miteco
-ckan_site_logo: "images/default/header-logo.png"
-ckan_favicon: images/default/favicon.ico
-ckan_site_intro_text: "[#en#]The open data portal of the [**Ministry for the Ecological Transition and the Demographic Challenge**](https://www.miteco.gob.es/) consists of an application using CKAN technology for the distribution of maps, data and spatial metadata and a [**CSW Catalog**]({{ pycsw_url }}) (OGC standard) for the metadata publication and discovery about spatial resources on the web. [#es#]El portal de datos abiertos del [**Ministerio para la Transición Ecológica y el Reto Demográfico**](https://www.miteco.gob.es/) es una aplicación que utiliza la tecnología CKAN para la distribución de mapas, datos y metadatos espaciales y un [**Catálogo CSW**]({{ pycsw_url }}) (estándar OGC) para la publicación y descubrimiento de metadatos sobre recursos espaciales en la web."
-ckan_site_about: "[#en#]The open data portal of the [**Ministry for the Ecological Transition and the Demographic Challenge**](https://www.miteco.gob.es/) consists of an application using CKAN technology for the distribution of maps, data and spatial metadata and a [**CSW Catalog**]({{ pycsw_url }}) (OGC standard) for the metadata publication and discovery about spatial resources on the web. [#es#]El portal de datos abiertos del [**Ministerio para la Transición Ecológica y el Reto Demográfico**](https://www.miteco.gob.es/) es una aplicación que utiliza la tecnología CKAN para la distribución de mapas, datos y metadatos espaciales y un [**Catálogo CSW**]({{ pycsw_url }}) (estándar OGC) para la publicación y descubrimiento de metadatos sobre recursos espaciales en la web."
 
 ### Web Services config ############################################
 ### Enable all sites in ckan-ansible/playbook/roles/webserver/templates/sites-available/*.conf.j2
@@ -214,8 +221,8 @@ sites_enabled:
   - ckan-pycsw
 
 ### CKAN service #########################################
-ckan_version: ckan-2.9.11
 ckan_virtualenv: /usr/lib/ckan/default
+ckan_src_dir: "{{ ckan_virtualenv }}/src"
 ckan_config_dir: /etc/ckan/default
 ckan_user: ckan
 ckan_group: ckan
@@ -225,10 +232,21 @@ ckan_log_dir: /var/log/ckan
 worker_harvester_cron: true
 ckan_tmp_dir: /tmp
 uwsgi_unix_http_server_socket_path: "{{ ckan_tmp_dir }}/uwsgi.sock"
+ckan_cors_origin_allow_all: false
+ckan_cors_origin_whitelist: ""
+
+### CKAN SMTP #########################################
+ckan_smpt_active: true
+ckan_smtp_server: "smtp.corporateict.domain:25"
+ckan_smpt_starttls: true
+ckan_smtp_user: "user"
+ckan_smtp_password: "password"
+ckan_smtp_mail_from: "ckan@{{ proxy_server_name }}"
+worker_email_notifications_cron: true
 
 ### CKAN extension versions #########################################
 ckanext_versions:
-  ckanext_xloader: 1.0.1-qgov.15
+  ckanext_xloader: 1.0.1-stable
   ckanext_harvest: v1.5.6
   ckanext_geoview: v0.1.0
   ckanext_spatial: v2.1.1
@@ -242,8 +260,7 @@ ckanext_versions:
 ### CKAN custom plugins #########################################
 # This is a dictionary of custom plugins to install. The key is the github user/repo and the value is the version to install.
 ckanext_custom_plugins:
-  mjanez/ckanext-schemingdcat: v3.2.2
-  opendatagis/ckanext-miteco: v0.1.1
+  mjanez/ckanext-schemingdcat: v4.0.0
 
 ### Solr Service #########################################
 solr_os_supported: 
@@ -297,9 +314,9 @@ pycsw_ckan_schema: iso19139_geodcatap
 pycsw_output_schema: iso19139_inspire
 pycsw_cron_days_interval: 2
 pycsw_cron_hour_start: 4
-pycsw_app_dir: "{{ ckan_virtualenv }}/src/ckan-pycsw"
+pycsw_app_dir: "{{ ckan_src_dir }}/ckan-pycsw"
 #### pycsw conf
-pycsw_identification_title: SIG MITECO Geospatial Catalogue
+pycsw_identification_title: Sample Geospatial Catalogue
 pycsw_identification_abstract: OGC CSW server powered by pycsw
 pycsw_identification_keywords: "catalogue,discovery,metadata"
 pycsw_provider_name: Sample
