--- a/playbook/roles/ckan/tasks/ckan_config_ckan.yml
+++ b/playbook/roles/ckan/tasks/ckan_config_ckan.yml
@@ -21,12 +21,13 @@
     state: link
     force: yes
 
-- name: "Create a symbolic link to the who.ini file in {{ ckan_virtualenv}}"
+- name: "Create a symbolic link to the who.ini file in {{ ckan_virtualenv}} for CKAN 2.9"
   file:
     src: "{{ ckan_config_dir}}/who.ini" 
     dest: "{{ ckan_virtualenv}}/who.ini" 
     state: link
     force: yes
+  when: ckan_version is match('^ckan-2\.9\..*')
 
 - name: Update CKAN config file
   include_tasks: ckan_config_ckan_ini.yml
