--- a/playbook/ansible.cfg
+++ b/playbook/ansible.cfg
@@ -10,3 +10,4 @@ roles_path = ./roles/common:./roles/ckan:./roles/database:./roles/webserver:./ro
 retry_files_save_path = ./config/tmp/retry/
 log_path = ./config/ansible.log
 stdout_callback = yaml
+collections_paths = ~/.ansible/collections:/usr/share/ansible/collections:/lib/python3.9/site-packages/ansible_collections
