--- a/playbook/inventories/staging/host_vars/staging_01.yml
+++ b/playbook/inventories/staging/host_vars/staging_01.yml
@@ -270,6 +270,7 @@ solr_os_supported:
   - "Debian"
 solr_port: 8983
 solr_host: 0.0.0.0
+solr_test_host: 127.0.0.1
 solr_mirror: "https://archive.apache.org/dist"
 solr_workspace: /root
 solr_tmp_dir: /tmp
@@ -341,7 +342,7 @@ pycsw_inspire_contact_email: admin@example.org
 pycsw_inspire_temp_extent: 2023-12-31/2030-12-31
 
 ### Test URLs
-test_solr_ckan_url: "http://{{ solr_host }}:{{ solr_port }}/solr/{{ solr_ckan_core_name }}"
+test_solr_ckan_url: "http://{{ solr_test_host }}:{{ solr_port }}/solr/{{ solr_ckan_core_name }}"
 test_redis_ckan_url: "redis://{{ redis_bind_interface }}:{{ redis_port }}/1"
 test_ckan_sqlalchemy_url: "postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}:{{ ckan_database.postgres_port }}/{{ ckan_database.ckan_db }}"
 test_ckan_datastore_ro_url: "postgresql://{{ ckan_datastore.datastore_readonly_user }}:{{ ckan_datastore.datastore_readonly_password }}@{{ ckan_datastore.datastore_host }}:{{ ckan_datastore.datastore_port }}/{{ ckan_datastore.ckan_datastore_db }}"
