--- a/playbook/roles/ckan/tasks/main.yml
+++ b/playbook/roles/ckan/tasks/main.yml
@@ -43,6 +43,7 @@
   include_role:
     name: ckan
     tasks_from: ckan_config_ckan.yml
+  when: deployment_action != "update"
 
 - name: Setup ckanext config
   include_role:
@@ -56,6 +57,7 @@
     group: "{{ ckan_group }}"
     recurse: yes
   become: true
+  when: deployment_action != "update"
 
 - name: "Change owner and group of {{ ckan_config_dir }} to {{ ckan_user }}"
   file:
@@ -64,3 +66,4 @@
     group: "{{ ckan_group }}"
     recurse: yes
   become: true
+  when: deployment_action != "update"
