--- a/playbook/roles/ckan/tasks/ckan_config_ckan_ini.yml
+++ b/playbook/roles/ckan/tasks/ckan_config_ckan_ini.yml
@@ -1,3 +1,18 @@
+- name: Copy CKAN config file
+  template:
+    src: ckan.ini.j2
+    dest: "{{ ckan_config_dir }}/ckan.ini"
+    mode: 0755
+  become: true
+  become_user: "{{ ckan_user }}"
+
+- name: "Create a symbolic link to the ckan.ini file in {{ ckan_virtualenv}}"
+  file:
+    src: "{{ ckan_config_dir }}/ckan.ini" 
+    dest: "{{ ckan_virtualenv}}/ckan.ini" 
+    state: link
+    force: yes
+
 # WTF CSRF token 
 - name: Generate 
   command: "{{ ckan_virtualenv }}/bin/ckan config-tool {{ ckan_config_dir }}/ckan.ini 'WTF_CSRF_SECRET_KEY=$(python3 -c \"import secrets; print(secrets.token_urlsafe())\")'"
