--- a/playbook/inventories/development/host_vars/development_01.yml
+++ b/playbook/inventories/development/host_vars/development_01.yml
@@ -213,7 +213,6 @@ ckanext__schemingdcat_endpoints_yaml: "endpoints.yaml"
 ckanext__schemingdcat_social_github: "https://github.com/mjanez/ckanext-schemingdcat"
 ckanext__schemingdcat_social_x: "https://x.com/ckanproject"
 ckanext__schemingdcat_social_linkedin: "https://www.linkedin.com/company/ckanproject"
-
 ckanext__schemingdcat__postgres__geojson_chars_limit: 1000
 ckanext__schemingdcat__postgres__geojson_tolerance: 0.001
 
@@ -238,19 +237,22 @@ ckan_cors_origin_allow_all: false
 ckan_cors_origin_whitelist: ""
 
 ### CKAN SMTP #########################################
-ckan_smpt_active: true
+ckan_smpt_active: false
 ckan_smtp_server: "smtp.corporateict.domain:25"
 ckan_smpt_starttls: true
 ckan_smtp_user: "user"
 ckan_smtp_password: "password"
 ckan_smtp_mail_from: "ckan@{{ proxy_server_name }}"
+ckan_smtp_reply_to: ''
+ckan_email_to: ''
+ckan_error_email_from: ''
 worker_email_notifications_cron: true
 
 ### CKAN extension versions #########################################
 ckanext_versions:
   ckanext_xloader: 1.0.1-stable
   ckanext_harvest: v1.5.6
-  ckanext_geoview: v0.1.0
+  ckanext_geoview: v0.2.0
   ckanext_spatial: v2.1.1
   ckanext_dcat: v1.8.0
   ckanext_scheming: release-3.0.0
